Fixing indentation and adding a basic list for words

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 /*
-Project:    react-news
-Author:     Evan Henley
+Project:  react-news
+Author:   Evan Henley
 Author URI: http://henleyedition.com/
 ====================================== */
 
@@ -19,5 +19,6 @@ Author URI: http://henleyedition.com/
 
 // views
 @import 'posts';
+@import 'words';
 @import 'single-post';
 @import 'modal';
